# GoIT-WEB-module8

./: README.md  config_example.ini  db_connect.py  pyproject.toml
contacts/: consumer_email.py  consumer_sms.py  contact.py  load_data.py  producer.py  rabbit_connect.py
quotes/: file_utils.py  main.py  models.py
